@@ -55,6 +55,8 @@ Fixes:
    
  Minor changes:
  * @listen/^-listens now carry over ANSI. Requested by Mercutio. [MG]
+ * @adisconnect now has %5, which is true if the disconnecting descriptor
+   was @hide. Suggested by Minion@M*U*S*H [GM]
 
 Tools:
  * New script in utils/ for searching change logs: grep-cl.pl [SW]
